# LEEM

./: .gitignore  README.md  pyproject.toml
configs/: aiohmm_experiment_prototype.json  aiohmm_experiment_smoke.json  gaussian_baseline.json  gaussian_experiment_prototype.json  gaussian_experiment_smoke.json  rcgan_experiment_pilot.json  rcgan_experiment_pilot_v2.json  rcgan_experiment_pilot_v3.json  rcgan_experiment_prototype.json  rcgan_experiment_smoke.json  synthetic_prototype.json  synthetic_rcgan_pilot.json  synthetic_smoke.json
docs/: autoregressive_input_output_hmm.md  conditional_multivariate_gaussian.md  evaluation_protocol.md  phase6_1_evaluation_reporting.md  phase6_1_file_manifest.md  phase6_file_manifest.md  phase6_smoke_results.md  phase7_1_rcgan_stability_pilot.md  phase7_2_rcgan_stabilization.md  phase7_3_rcgan_asymmetric_optimizer.md  phase7_file_manifest.md  preprocessing_and_model_contract.md  recurrent_conditional_gan.md  synthetic_data_generation.md
results/synthetic/: README.md
scripts/: compare_experiments.py  run_aiohmm_experiment.py  run_gaussian_experiment.py  run_rcgan_experiment.py  upgrade_evaluation_results.py  verify_gaussian_model.py  verify_preprocessing_pipeline.py  verify_synthetic_pipeline.py
tests/: test_aiohmm_experiment.py  test_aiohmm_inference.py  test_aiohmm_model.py  test_config.py  test_evaluation.py  test_evaluation_reporting.py  test_gaussian_model.py  test_generation.py  test_geometry.py  test_io.py  test_model_base.py  test_preprocessing.py  test_rcgan_experiment.py  test_rcgan_model.py  test_scenarios.py  view.py
(+104 files in other folders)
