[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lane-error-modeling"
version = "0.6.0"
description = "Reproducible synthetic lane-estimation error generation and modelling pipeline"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
evaluation = [
    "matplotlib>=3.8",
]

[project.scripts]
generate-lane-error-data = "lane_error_modeling.data.synthetic.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
